# networkd

./: CHANGELOG.md  CONTRIBUTING.md  Untitled.ipynb  pyproject.toml  readthedocs.yaml
docs/: Makefile  conf.py  example.ipynb  make.bat
networkd-0.1.1/: PKG-INFO  README.md  pyproject.toml
networkd-0.1.1/src/networkd/: networkd.py
src/networkd/: networkd.py
tests/: test_networkd.py
